--- a/mvn-proj/my-app/pom.xml
+++ b/mvn-proj/my-app/pom.xml
@@ -27,6 +27,12 @@
       <scope>test</scope>
     </dependency>
 
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.14.0</version>
+  </dependency>
+
     <dependency>
       <groupId>jakarta.platform</groupId>
       <artifactId>jakarta.jakartaee-api</artifactId>
@@ -54,11 +60,10 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
     <!-- <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>3.12.12</version>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
     </dependency> -->
 
     <dependency>
@@ -66,6 +71,15 @@
         <artifactId>mongodb-driver-sync</artifactId>
         <version>4.11.1</version>
     </dependency>
+
+    
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.1</version>
+        <scope>runtime</scope>
+    </dependency>
+        
 
   </dependencies>
 
